Rev. B is ready.

--- a/rev_b/bus_grove12.cmp
+++ b/rev_b/bus_grove12.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Sun 02 Nov 2014 03:48:29 PM PST
+Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Mon 09 Feb 2015 07:18:17 AM PST
 
 BeginCmp
 TimeStamp = /53EA3E9D;
