Split 22uF capacitor into tantalum and aluminum.

--- a/rev_b/bus_grove12.cmp
+++ b/rev_b/bus_grove12.cmp
@@ -1,9 +1,9 @@
-Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Mon 09 Feb 2015 07:18:17 AM PST
+Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Thu 12 Feb 2015 10:45:17 PM PST
 
 BeginCmp
 TimeStamp = /53EA3E9D;
 Reference = C1;
-ValeurCmp = 22uF;
+ValeurCmp = 22uF_35V_ALUM;
 IdModule  = bus_grove12:Capacitor3MMDiscRM2.5;
 EndCmp
 
@@ -17,7 +17,7 @@ EndCmp
 BeginCmp
 TimeStamp = /53EA4CB4;
 Reference = C3;
-ValeurCmp = 22uF;
+ValeurCmp = 22uF_6.3V_TANT;
 IdModule  = bus_grove12:Capacitor3MMDiscRM2.5;
 EndCmp
 
@@ -31,7 +31,7 @@ EndCmp
 BeginCmp
 TimeStamp = /53E996AB;
 Reference = C5;
-ValeurCmp = 1uF;
+ValeurCmp = .1uF;
 IdModule  = bus_grove12:Capacitor4x3RM2-5_RevB;
 EndCmp
 
